--- a/_config.yml
+++ b/_config.yml
@@ -20,5 +20,8 @@ plugins:
   - jekyll-paginate
   - jemoji
 
+# staticman comments configuration
+staticman_url: https://bobert-9ef0825f876a.herokuapp.com/v2/entry/shaeplays/daybydayshae/master/comments
+
 paginate: 8
 paginate_path: "/page/:num"
