--- a/staticman.yml
+++ b/staticman.yml
@@ -1,4 +1,4 @@
-# from @avglinux
+# Modified from https://github.com/avglinux/alu-test-website/blob/master/staticman.yml
 
 comments:
   # (*) REQUIRED
