--- a/staticman.yml
+++ b/staticman.yml
@@ -5,7 +5,7 @@ comments:
   #
   # Names of the fields the form is allowed to submit. If a field that is
   # not here is part of the request, an error will be thrown.
-  allowedFields: ["name", "email", "url", "message", "replying_to_uid", "subscribe"]
+  allowedFields: ["name", "url", "message", "replying_to_uid"]
 
   # (*) REQUIRED
   #
